--- a/vijay.html
+++ b/vijay.html
@@ -1,8 +1,7 @@
 <html>
   <centre>
-  <head>
-    <title>facebook.com</title>
-  </head>
-  <h1>vijay</h1>
+         <h1>vijay</h1>
   </centre>
+  <hr>
+<p>vijay is a famous actor</p>
 </html>
