--- a/vijay.html
+++ b/vijay.html
@@ -6,3 +6,10 @@
 <br>
 <br>
 Born in Madras to director S. A. Chandrasekhar, Vijay made his debut as a child actor in the Tamil film Vetri (1984). After a few roles as a child actor in his father’s films, he played his first lead role in the film Naalaiya Theerpu (1992) at the age of 18. Vijay continued doing lead roles for the next few years with notable films amongst them included Poove Unakkaga (1996), Love Today (1997), Kadhalukku Mariyadhai (1997), Thullatha Manamum Thullum (1999) and Kushi (2000). In 1998, he was awarded Kalaimaamani by the Government of Tamil Nadu for his role in Kadhalukku Mariyadhai.</p>
+<p>
+  Vijay had a sister named Vidhya, who died at the age of two years.<br>
+He entered the Tamil film industry as a child artist.<br>
+His mother Shobha Chandrasekar is an accomplished playback singer.<br>0
+He announced the formation of his political party 'Tamilaga Vetri Kazhagam' in 2024.<br>
+He has the same date of birth as Devayani, including the year. However, the places of birth are different. <br>He was born in Chennai while Devayani was born in Mumbai.<br>
+</p>
