--- a/vijay.html
+++ b/vijay.html
@@ -13,3 +13,4 @@ His mother Shobha Chandrasekar is an accomplished playback singer.<br>0
 He announced the formation of his political party 'Tamilaga Vetri Kazhagam' in 2024.<br>
 He has the same date of birth as Devayani, including the year. However, the places of birth are different. <br>He was born in Chennai while Devayani was born in Mumbai.<br>
 </p>
+<h2>Thalapathy</h2>
